OOZ-219: Remove redundant warning messages in oozie status command